# set-tutorial-ylg

./: .env.example  .gitignore  GOLD_MGO_GO_TUTORIAL.md  README.md  THE_DATA_LOGGER.md  index.html  pyproject.toml  render_tutorial_html.py  settrade_open_api_setting.ipynb  step_basic_0_orderbook_data_engineering.ipynb  step_basic_1_spread.html  step_basic_1_spread.ipynb  step_basic_1_spread.md  step_basic_2_strategy.html  step_basic_2_strategy.ipynb  step_basic_2_strategy.md  step_basic_3_fee_tiers.html  step_basic_3_fee_tiers.ipynb  step_basic_3_fee_tiers.md  step_basic_4_fee_tiers_real.html  step_basic_4_fee_tiers_real.ipynb  step_basic_4_fee_tiers_real.md  step_basic_5_usdtthb_walkthrough.html  step_basic_5_usdtthb_walkthrough.ipynb  step_basic_5_usdtthb_walkthrough.md  step_basic_6_gold_arbitrage.html  step_basic_6_gold_arbitrage.ipynb  step_basic_6_gold_arbitrage.md  step_basic_7_usdm26_live_bidask.ipynb  usdthb-spread-strategy-tutorial-TH.html
