[project]
name = "labs-setbot-tutorial"
version = "0.1.0"
description = "A 6-step notebook tutorial: trading the spread between TFEX USD futures and Binance TH USDTTHB."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.0",
    "settrade-v2>=2.2.1",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=16.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "nbconvert>=7.16.0",
    "nbformat>=5.10.0",
    "mistune>=3.0.0",
    "pygments>=2.17.0",
]
